# colegio

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
colegio/: __init__.py  audio.py  crypto.py  envelope.py  imaging.py  inscriptions.py  keys.py  music.py  music_render.py  node.py  reading.py  tags.py
tests/: test_audio.py  test_codec2_mode.py  test_corpus_groundtruth.py  test_crypto.py  test_envelope.py  test_inscriptions.py  test_music.py  test_music_render.py  test_pydoge_vs_cryptos.py  test_quipu_roundtrip.py  test_reading.py  test_tags.py
